completa la estructura de la página, falta el contenido

--- a/accesibilitiLabs/Views/Home/About.cshtml
+++ b/accesibilitiLabs/Views/Home/About.cshtml
@@ -4,10 +4,10 @@
 <h2>@ViewBag.Title.</h2>
 <p> estamos comprometidos con la accesibilidad de la web, no importa quien sea o como ingrese </p>
 <article>
-    la web nos permite estar conectados en todo momento y lugar. 
-    pero a un así muchas páginas web  tienen bareras de accesibilidad  para muchas personas.
-    Nos proponemos ayudarte a mejorar la accsibilidad de tu   sitio web 
+    La tecnología  nos permite acceder a   muchos recursos que antes no podíamos acceder. Pero hay muchos recursos  que no son accesibles para  todos.
+    Nuestra misión  es  hacer el contenido mas accesible para todas  las personas, independientemente de como lo visualicen
+
     ¿por que  mejorar la accesiblidad?
-    según la organización  mundial de la salud, mas de 1000 millones de personas  en el mundo presentan alguna discapacidad, y por lo tanto  si mejoramos el acceso a  nuestras páginas web significa que mas usuarios   podrán usar nuestros servicios.
+    según la organización  mundial de la salud, mas de 1000 millones de personas  en el mundo presentan alguna discapacidad, y por lo tanto  si mejoramos el acceso significa que mas usuarios   podrán usar nuestros servicios.
 
 </article>
