--- a/accesibilitiLabs/Views/Shared/_Layout.cshtml
+++ b/accesibilitiLabs/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <h1 class="text-center"> acceso infinito, de infinitas formas </h1>
                 @Html.ActionLink("accesibiliti labs  ", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
