--- a/accesibilitiLabs/Views/Home/Contact.cshtml
+++ b/accesibilitiLabs/Views/Home/Contact.cshtml
@@ -1,9 +1,16 @@
 ﻿@{
     ViewBag.Title = "Contacto";
 }
-<h2>@ViewBag.Title.</h2>
+<h3 class="text-center">@ViewBag.Title.</h3>
 
-
-<address>
-    <strong>comunicate con nosotros:</strong>   <a href="mailto:emir.chesini@gmail.com">emir.chesini@gmail.com</a><br />
+<div class="text-right">
+    <address>
+       <a href="mailto:emir.chesini@gmail.com">emir.chesini@gmail.com</a><br />
     </address>
+    <address>
+        <a href="tel:5493513320801" title="llamanos!"></a>
+    </address>
+    <address>
+        <a href="https://api.whatsapp.com/send?phone=5493513320801&" title="consultar por whatsapp"> <img src="~/Content//images/whatsapp.jpg" class="img-thumbnail" alt="" width="200" height="100" /> </a>
+    </address>
+</div>
