--- a/accesibilitiLabs/Views/Home/Index.cshtml
+++ b/accesibilitiLabs/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<h1> tecnología accesible por todos, en todos los contextos</h1>
-<h2> sobre nosotros   </h2>
+﻿<h2> sobre nosotros   </h2>
 @Html.Partial("About")
+@Html.Partial("Services")
 @Html.ActionLink("consultanos","Index","Consult")
+@Html.Partial("Contact")
