mejorada la redacción

--- a/accesibilitiLabs/Views/Home/About.cshtml
+++ b/accesibilitiLabs/Views/Home/About.cshtml
@@ -2,12 +2,9 @@
     ViewBag.Title = "sobre nosotros";
 }
 <h2>@ViewBag.Title.</h2>
-<p> estamos comprometidos con la accesibilidad de la web, no importa quien sea o como ingrese </p>
 <article>
-    La tecnología  nos permite acceder a   muchos recursos que antes no podíamos acceder. Pero hay muchos recursos  que no son accesibles para  todos.
-    Nuestra misión  es  hacer el contenido mas accesible para todas  las personas, independientemente de como lo visualicen
+    Somos  ContinumLabs,  una empresa fundada en 2018.
+    Nuestro fundador, Emir Chesini, creó este proyecto con el objetivo de ayudar a las personas con  discapacidad  en general y  facilitar el trabajo de los profesionales que trabajan con ellas
 
-    ¿por que  mejorar la accesiblidad?
-    según la organización  mundial de la salud, mas de 1000 millones de personas  en el mundo presentan alguna discapacidad, y por lo tanto  si mejoramos el acceso significa que mas usuarios   podrán usar nuestros servicios.
 
 </article>
