--- a/accesibilitiLabs/Views/Home/Index.cshtml
+++ b/accesibilitiLabs/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
-﻿<h2> sobre nosotros   </h2>
+﻿<h1 class="text-center"> ContinumLabs </h1>
+
 @Html.Partial("About")
 @Html.Partial("Services")
-@Html.ActionLink("consultanos","Index","Consult")
+@Html.ActionLink("consultanos", "Index", "Consult")
 @Html.Partial("Contact")
