--- a/accesibilitiLabs/Views/Home/Services.cshtml
+++ b/accesibilitiLabs/Views/Home/Services.cshtml
@@ -4,20 +4,18 @@
 }
 
 <h2>@ViewBag.Title</h2>
-<h3> testing de accesibilidad web </h3>
-<article>
-     mientras mas cantidad de gente visite su página web, mas  repercución tendrá.
-    es por eso que es    necesario desarrollarlas de la manera mas accesible posible.
-    Es por eso que probamos su página web
-</article>
-<hr />
-<h3> testing de aplicaciones accesibles</h3>
-<article>
-    probamos sus aplicaciones, garantizando que   la mayor cantidad de usuarios puedan interactuar con ellas.
+<ul>
+    <li> Creación de documentación accesible. </li>
+    <text>
+        Transformamos documentación no accesible, es decir  documentos pdf no acesibles, documentación en papel, etc. En documentación digital acesible para todos los usuarios.
+    </text>
+    <li> Testing de accesibilidad web  </li>
+    <text>
+        probamos tus páginas web para que sean  accesibles para todas las personas, independientemente de sus capacidades o desde que dispositivo se conecte.
+    </text>
+    <li> Testing de  aplicaciones accesibles.</li>
+    <text>
+        testeamos tus aplicaciones para que sean accesible para todos los usuarios. En todas las plataformas.
 
-</article>
-<hr />
-<h3> documentación accesible </h3>
-<article>
-combertimos documentación no accesible como pueden ser pdf con imágenes,  escritos en papel o fórmulas matemáticas  en información que puede ser interpretada por todos  
-</article>
+    </text>
+</ul>
