--- a/accesibilitiLabs/Views/Shared/_Layout.cshtml
+++ b/accesibilitiLabs/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title accesibiliti labs  </title>
+    <title>@ViewBag.Title ContinumLabs  </title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -17,8 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <h1 class="text-center"> acceso infinito, de infinitas formas </h1>
-                @Html.ActionLink("accesibiliti labs  ", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("ContinumLabs", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -33,7 +32,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - accesibiliti labs</p>
+            <p>&copy; @DateTime.Now.Year -      ContinumLabs</p>
         </footer>
     </div>
 
